// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders an image element for each element in the data array 1`] = `
<div>
  <div
    class="sc-bZQynM jgZutv"
  >
    <div
      class="sc-bdVaJa kiUbly"
    >
      <div
        class="sc-bwzfXH fFwymd"
      >
        <img
          class="sc-htpNat jtiZZo"
          src="https://enda.ie/filename-01.gif"
        />
      </div>
    </div>
    <div
      class="sc-bdVaJa kiUbly"
    >
      <div
        class="sc-bwzfXH fFwymd"
      >
        <img
          class="sc-htpNat jtiZZo"
          src="https://enda.ie/filename-02.gif"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`renders no image elements when data is empty 1`] = `
<div>
  <div
    class="sc-bZQynM jgZutv"
  />
</div>
`;
